--- a/.parcelrc
+++ b/.parcelrc
@@ -1,8 +1,3 @@
 {
-  "extends": "@parcel/config-default",
-  "transformers": {
-    "*.{ts,tsx}": [
-      "@parcel/transformer-typescript-tsc"
-    ]
-  }
+  "extends": "@parcel/config-default"
 }
