--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "module": "index.js",
   "type": "module",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
     "@parcel/transformer-typescript-tsc": "^2.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/parcel-bundler": "^1.12.5",
     "@types/react": "^18.2.7",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.2.4",
     "babel-jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -18,7 +21,7 @@
     "process": "^0.11.10",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "latest"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@babel/core": "^7.21.8",
@@ -29,11 +32,12 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.12.16",
     "jest": "^29.5.0",
-    "parcel-bundler": "^1.12.5",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-jsx": "^1.0.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "zustand": "^4.3.8"
   },
   "scripts": {
     "start": "yarn parcel src/index.html",
