--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-jsx": "^1.0.0",
     "react-router-dom": "^6.11.2",
     "zustand": "^4.3.8"
