added build command

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "pines-website",
-  "module": "index.js",
   "type": "module",
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
@@ -41,7 +40,8 @@
     "zustand": "^4.3.8"
   },
   "scripts": {
-    "start": "yarn parcel src/index.html",
-    "test": "jest"
+    "start": "parcel src/index.html",
+    "test": "jest",
+    "build": "parcel build src/index.html"
   }
 }
